--- a/works.html
+++ b/works.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -83,8 +83,8 @@
 <h3>Music criticism</h3>
 
 <ul>
-    <li><a href="https://www.amazon.co.jp/exec/obidos/ASIN/4401619765/inquisitor-22/"><img src="https://images-fe.ssl-images-amazon.com/images/P/4401619765.09._SL75.jpg" /> ロックは世界を変えない—1984 UTOPIA ODDITY. 有限会社スローガン（編）, デヴィッド・ボウイ・ファイル, pp. 52–59. シンコーミュージック・エンタテインメント, 2005.</a></li>
-    <li><a href="https://www.amazon.co.jp/exec/obidos/ASIN/4401619137/inquisitor-22/"><img src="https://images-fe.ssl-images-amazon.com/images/P/4401619137.09._SL75.jpg" /> ロックスターがめったに語らないこと—U2と愛と神の恵み. 有限会社スローガン（編）, U2ファイル, pp. 166–171. シンコーミュージック・エンタテインメント, 2005.</a></li>
+    <li><a href="https://www.amazon.co.jp/exec/obidos/ASIN/4401619765/inquisitor-22/"><img src="https://images-fe.ssl-images-amazon.com/images/P/4401619765.09._SL75.jpg" alt="4401619765" /> ロックは世界を変えない—1984 UTOPIA ODDITY. 有限会社スローガン（編）, デヴィッド・ボウイ・ファイル, pp. 52–59. シンコーミュージック・エンタテインメント, 2005.</a></li>
+    <li><a href="https://www.amazon.co.jp/exec/obidos/ASIN/4401619137/inquisitor-22/"><img src="https://images-fe.ssl-images-amazon.com/images/P/4401619137.09._SL75.jpg" alt="4401619137" /> ロックスターがめったに語らないこと—U2と愛と神の恵み. 有限会社スローガン（編）, U2ファイル, pp. 166–171. シンコーミュージック・エンタテインメント, 2005.</a></li>
 </ul>
 
 
