--- a/works.html
+++ b/works.html
@@ -68,6 +68,7 @@
     <li><a href="docs/why_lisp.html">なぜ Lisp なのか</a></li>
     <li><a href="docs/self.html">自分のコードを出力するプログラム</a></li>
     <li><a href="docs/unknowable/">不完全性定理のLisp, Mathematicaによる記述</a></li>
+    <li><a href="docs/swarm/">Swarmについてのメモ</a></li>
 </ul>
 
 
