--- a/works/why_lisp.html
+++ b/works/why_lisp.html
@@ -125,7 +125,7 @@ layout: page
   <li><a href="http://www.norvig.com/luv-slides.ps">Tutorial on Good Lisp Programming Style</a></li>
   <li><a href="http://www.norvig.com/design-patterns">Design Patterns in Dynamic Languages</a></li>
   <li><a href='https://web.archive.org/web/20130812221919/http://www010.upp.so-net.ne.jp:80/okshirai/norvigfinal-ja.txt'>大規模なウェブサービス、そしてそれらを構築するプログラミング言語</a><blockquote><p>なぜLispは誰もが大好きな言語ではないのか? なぜ誰もが全てに対してLispを使うわけではないのか? なぜLispはGoogleでは使われていないのか?</p></blockquote></li>
-  <li><a href="http://www.unixuser.org/~euske/doc/python/python-lisp-j.html">Lisp プログラマのための Python 入門<</a></li>
+  <li><a href="http://www.unixuser.org/~euske/doc/python/python-lisp-j.html">Lisp プログラマのための Python 入門</a></li>
 </ul>
 
 
