--- a/works/why_lisp.html
+++ b/works/why_lisp.html
@@ -22,17 +22,17 @@ layout: page
   <li><a href="http://www.unixuser.org/~euske/doc/dijkstra-ja/thehumbleprogrammer.html">ダイクストラ「謙虚なるプログラマ」</a>
     <blockquote>LISPは冗談まじりに「コンピュータを誤用するための、もっとも知的な方法」と言われることがありますが、私はこれはすばらしい褒め言葉だと思います。なぜならこれはあらゆる種類の自由を可能にしているからです。LISPは私たち人類のうちもっとも才能ある人々が、それまでは不可能だったような方法で思考することを支援してきました。</blockquote>
   </li>
-  <li><a href="http://jp.franz.com/base/seminar/2004-06-10/SeminarJune2004-WadaSensei.pdf">和田英一「Lisp へのこだわり」</a>
+  <li><a href="https://web.archive.org/web/20060901042350/http://jp.franz.com:80/base/seminar/2004-06-10/SeminarJune2004-WadaSensei.pdf">和田英一「Lisp へのこだわり」</a>
     <blockquote><p>Lisp に夢中なのは一部の変人だけなのかもしれない。</p></blockquote>
   </li>
   <li><a href="http://cruel.org/freeware/hacker.html">Eric S. Raymond 著, 山形浩生訳「ハッカーになろう」</a><blockquote><p>LISP は、それをモノにしたときのすばらしい悟り体験のために勉強しましょう。この体験は、その後の人生でよりよいプログラマーとなる手助けとなるはずです。たとえ、実際には LISP そのものをあまり使わなくても。</p></blockquote></li>
   <li><a href='http://www.itmedia.co.jp/enterprise/articles/0801/29/news010.html'>まつもとゆきひろ「Let's Talk Lisp」</a><blockquote><p>Lisp はいつも時代の最先端に位置している</p></blockquote></li>
   <li>Paul Graham
     <ul>
-    <li><a href="https://web.archive.org/web/20070611175845/http://www.shiro.dreamhost.com:80/scheme/trans/iflisp-j.htmll">Lisp がそんなにすごいなら</a><blockquote><p>Lisp がそんなにすごいなら、どうしてもっとたくさんの人が使わないんだろう。最近の講演で、こんな質問を聴衆の学生から受けた。もちろんそれが初めてじゃない。</p></blockquote></li>
-    <li><a href="https://web.archive.org/web/20080725200250/http://www.shiro.dreamhost.com/scheme/trans/beating-the-averages-j.html">普通のやつらの上を行け</a>（<a href='https://www.amazon.co.jp/exec/obidos/ASIN/4274065979/inquisitor-22/'>『ハッカーと画家』</a>に収録）<blockquote><p>Lisp のプログラムコードは Lisp のデータオブジェクトから出来ている。それは、ソースコードは文字列で出来ていて、文字列は言語でサポートされている、というようなつまらない意味じゃない。</p></blockquote></li>
+    <li><a href="https://practical-scheme.net/trans/iflisp-j.html">Lisp がそんなにすごいなら</a><blockquote><p>Lisp がそんなにすごいなら、どうしてもっとたくさんの人が使わないんだろう。最近の講演で、こんな質問を聴衆の学生から受けた。もちろんそれが初めてじゃない。</p></blockquote></li>
+    <li><a href="https://practical-scheme.net/trans/beating-the-averages-j.html">普通のやつらの上を行け</a>（<a href='https://www.amazon.co.jp/exec/obidos/ASIN/4274065979/inquisitor-22/'>『ハッカーと画家』</a>に収録）<blockquote><p>Lisp のプログラムコードは Lisp のデータオブジェクトから出来ている。それは、ソースコードは文字列で出来ていて、文字列は言語でサポートされている、というようなつまらない意味じゃない。</p></blockquote></li>
   </ul></li>
-  <li><a href="https://web.archive.org/web/20070208140910/http://www.shiro.dreamhost.com:80/scheme/wiliki/wiliki.cgi/Lisp:GreenspunsTenthRule">Greenspunの第10規則</a><blockquote><p>全ての十分に複雑な C もしくは Fortran プログラムは、後付けの、不完全な仕様とバグを持ち、遅い、Common Lisp の半分の実装を含んでいる。</p></blockquote></li>
+  <li><a href="https://practical-scheme.net/wiliki/wiliki.cgi/Lisp:GreenspunsTenthRule">Greenspunの第10規則</a><blockquote><p>全ての十分に複雑な C もしくは Fortran プログラムは、後付けの、不完全な仕様とバグを持ち、遅い、Common Lisp の半分の実装を含んでいる。</p></blockquote></li>
    <li><a href="http://www.franz.com/success/customer_apps/artificial_intelligence/kurzweil.lhtml">Exploring the Code of Creativity</a>（絵を描くプログラム <a href='http://www.kurzweilcyberart.com/'>AARON</a> については、<a href='https://www.amazon.co.jp/exec/obidos/ASIN/431400830X/inquisitor-22'>『コンピュータ画家アーロンの誕生』</a>を参照）<blockquote><p>（絵を描こうとする場合に用いる膨大なルールは）C のような言語では表現不可能だった。</p></blockquote></li>
 </ul>
 
@@ -124,7 +124,7 @@ layout: page
   <li><a href="http://www.norvig.com/java-lisp.html">Lisp as an Alternative to Java</a></li>
   <li><a href="http://www.norvig.com/luv-slides.ps">Tutorial on Good Lisp Programming Style</a></li>
   <li><a href="http://www.norvig.com/design-patterns">Design Patterns in Dynamic Languages</a></li>
-  <li><a href='https://web.archive.org/web/20130812221919/http://www010.upp.so-net.ne.jp:80/okshirai/norvigfinal-ja.txt'>大規模なウェブサービス、そしてそれらを構築するプログラミング言語</a><blockquote><p>なぜLispは誰もが大好きな言語ではないのか? なぜ誰もが全てに対してLispを使うわけではないのか? なぜLispはGoogleでは使われていないのか?</p></blockquote></li>
+  <li><a href='view-source:https://web.archive.org/web/20130812221919if_/http://www010.upp.so-net.ne.jp:80/okshirai/norvigfinal-ja.txt'>大規模なウェブサービス、そしてそれらを構築するプログラミング言語</a><blockquote><p>なぜLispは誰もが大好きな言語ではないのか? なぜ誰もが全てに対してLispを使うわけではないのか? なぜLispはGoogleでは使われていないのか?</p></blockquote></li>
   <li><a href="http://www.unixuser.org/~euske/doc/python/python-lisp-j.html">Lisp プログラマのための Python 入門</a></li>
 </ul>
 
