ドメイン廃止に伴う修正

--- a/works/self.html
+++ b/works/self.html
@@ -110,7 +110,7 @@ eval $prog;</code></pre>
   <li><a href="https://dl.acm.org/citation.cfm?id=358210">Ken Thompson. Reflections on Trusting Trust. (ACM Turing Award Lecture)</a> （<a href="https://www.amazon.co.jp/exec/obidos/asin/4320024877/inquisitor-22">『ACMチューリング賞講演集』</a>に日本語訳「信用を信用することができるだろうか」が収録されている。）</li>
   <li><a href="https://www.amazon.co.jp/exec/obidos/asin/443420159X/inquisitor-22">ヘンリー・S. ウォーレン『ハッカーのたのしみ』（エスアイビーアクセス, 2004）</a></li>
   <li><a href="https://www.ipsj.or.jp/07editj/promenade/4703.pdf">尾上能之. 自分自身を出力するプログラム. 情報処理, Vol.47, No. 3, pp. 301&ndash;309, 2006.</a></li>
-  <li><a href='http://blog.unfindable.net/archives/561'>codepadの遊び方</a></li>
+  <li><a href='https://web.archive.org/web/20190507091548/http://blog.unfindable.net/archives/561'>codepadの遊び方</a></li>
   <li><a href='../unknowable/'>不完全性定理のLisp, Mathematicaによる記述</a></li>
 </ul>
 </body>
